--- a/Service/app/src/main/res/values/strings.xml
+++ b/Service/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Service</string>
+    <string name="password_input">Password</string>
+    <string name="username_input">Username</string>
+    <string name="login_button">Login</string>
+    <string name="signup_button">Signup</string>
 </resources>
